================================================
|                Version 0.8                   |
================================================
 - Created scene and sceneNode abstractions;
 - Added view frustum culling for shadows;

BugFixes:
 - Fixed a bug that freezes the game when drinking a beer (thanks 
 to zerberros for the bug report);

================================================
|                Version 0.7                   |
|            Released: 2011-02-28              |
================================================
 - New race's images;
 - New classes' images;
 - Rewrote particle systems for better generalization;
 - dntMapEditor: Using dntList and defParser for list of files;
 - dntMapEditor: Plane editor for any kind of particles;
 - heightmap2dnt: Added indoor map import (with walls);
 - Capacity to create empty (without decorations) windows;
 - Text over cursor;
 - Added instantKill percentual to weapons (aka: probability
   of killing the target in a single strike);
 - Added instantKilled percentual to characters (aka: probability
   of get killed in a single strike);
 - Rewrote the dntParticleEditor to be more intuitive;
 - New main GUI layout;
 - Added pickable objects descriptions;
 - dntMapEditor: Better wall cut and destroy;
 - dntMapEditor: Better wall add;
 - dntMapEditor: "Shift key" toggle camera faster move;
 - New models and textures;

BugFixes:
 - Fixed the outdoor minimap scale ratio;
 - Automatically don't render shadow for low height sceneries at floor;
 - Fixed text renderer (was adding two times last character when 
   checking current string size);
 - Fixed the terrain on the crat map;
 - Default wall texture repeat to 64 (instead of 16);


================================================
|                Version 0.6                   |
|            Released: 2010-08-15              |
================================================
 - Use of talents;
 - Select new talents at character creation and level up;