@@ -23,5 +23,5 @@ main_attack_sound = sndfx/weapons/piercing_normal.ogg
 second_damage_type = slashing
 second_attack_sound = sndfx/weapons/slashing_normal.ogg
 damage_dice = 1*d6+0x2
-eqAngles = -45,0,90
+eqAngles = 0,0,90
 eqTrans1 = -0.2,-0.5,0
